--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.12.2",
 		"react-icons": "^4.2.0",
+		"react-mailchimp-subscribe": "^2.1.3",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"react-scroll": "^1.8.3",
