--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
 		"node-sass": "^6.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-hook-form": "^7.12.2",
+		"react-hook-form": "^7.29.0",
 		"react-icons": "^4.2.0",
 		"react-mailchimp-subscribe": "^2.1.3",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"react-scroll": "^1.8.3",
+		"react-slick": "^0.28.1",
+		"react-spinners": "^0.11.0",
+		"slick-carousel": "^1.8.1",
+		"sweetalert": "^2.1.2",
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
