--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emailjs/browser": "^3.6.2",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
@@ -11,6 +12,7 @@
 		"node-sass": "^6.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-helmet": "^6.1.0",
 		"react-hook-form": "^7.29.0",
 		"react-icons": "^4.2.0",
 		"react-mailchimp-subscribe": "^2.1.3",
